--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ UnityVS.meta
 /Assets/NGUI.meta
 /Assets/UnityVS.meta
 /Assets/Editor.meta
+/UnityVS.UnityProject.v12.suo
+/UnityProject.sln
+/UnityProject.userprefs
+/UnityProject-csharp.sln
+/UnityVS.UnityProject.CSharp.csproj
+/UnityVS.UnityProject.CSharp.Editor.csproj
+/UnityVS.UnityProject.sln
+obj
