--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Editor\ThirdPlugin\DisableCreateSameUITemplate.cs" />
      <Compile Include="Assets\Editor\ThirdPlugin\UITemplateInspector.cs" />
      <Compile Include="Assets\Editor\UICodeGenerator\CSharpFileGenerator.cs" />
      <Compile Include="Assets\Editor\UICodeGenerator\CodeGeneratorWindow.cs" />
