--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -232,6 +232,7 @@
      <Compile Include="Assets\Script\GuideTrigger\MoudleOpenTrigger.cs" />
      <Compile Include="Assets\Script\GuideTrigger\TaskTrigger.cs" />
      <Compile Include="Assets\Script\GuideTriggerMgr.cs" />
+     <Compile Include="Assets\Script\NewGuideMask.cs" />
      <Compile Include="Assets\Script\Test.cs" />
      <Compile Include="Assets\Script\UITemplate.cs" />
      <Compile Include="Assets\Tools\UICodeGenerator\UICGTools.cs" />
@@ -255,6 +256,7 @@
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Transparent Colored 3.shader" />
      <None Include="Assets\NGUI\Examples\Atlases\Refractive\Refractive Font - Normal.txt" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Premultiplied Colored 2.shader" />
+     <None Include="Assets\Atlas\ui.txt" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Text 3.shader" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Transparent Packed 2.shader" />
      <None Include="Assets\NGUI\EasyTouch\Readme_first.txt" />
